fix: Fix search input contrast

--- a/src/components/Search/Suggest.scss
+++ b/src/components/Search/Suggest.scss
@@ -27,6 +27,10 @@
     }
 
     &__input {
+        --g-text-input-border-color: var(--g-color-line-generic-accent);
+        --g-text-input-border-color-hover: var(--g-color-line-generic-accent-hover);
+        --g-text-input-placeholder-color: var(--g-color-text-hint);
+
         & input::placeholder {
             transition: color 0.1s;
         }
